syntax = "proto3";

package paqet;

option go_package = "paqet/internal/tnet/grpc/proto";

// PaqetTransport service for bidirectional streaming
service PaqetTransport {
  // Stream opens a bidirectional stream for data transfer
  rpc Stream(stream StreamData) returns (stream StreamData);
  
  // Ping tests the connection
  rpc Ping(PingRequest) returns (PongResponse);
}

// StreamData represents data being sent over the stream
message StreamData {
  int32 stream_id = 1;
  bytes data = 2;
  bool close = 3;
}

// PingRequest is sent to test connection
message PingRequest {
  int64 timestamp = 1;
}

// PongResponse is returned from ping
message PongResponse {
  int64 timestamp = 1;
}
